--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+      "@fortawesome/free-solid-svg-icons": "^5.15.4",
+      "@fortawesome/react-fontawesome": "^0.1.16",
+      "bootstrap": "^5.1.3",
+      "react-bootstrap": "^2.1.0",
+      "react-router-dom": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
